[package]
name = "ruredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"                                 # error handling
async-trait = "0.1.77"
bytes = "1.5"                                     # helps manage buffers
clap = { version = "4.5", features = ["derive"] }
config = "0.14.0"
dashmap = "5.5.3"
once_cell = "1.19.0"
rand = "0.8.5"
skiplist = "0.5.1"
# thiserror = "1.0.32"                                # error handling
tokio = { version = "1.36.0", features = ["full"] } # async networking
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
